# ecma262-compare

./: .eslintrc.js  .gitignore  LICENSE  Local.md  Makefile  README.md  base.css  broken_revs.json  build.py  build.sh  compare.css  compare.js  config.json  extract.py  htmldiff.js  index.html  package.json  pr-comments.json  pr-status.json  prs.js  prs.json  remove_script.py  rendered.css  rendered.js  rendered_prs.html  rendered_revs.html  requirements.txt  revs.js  revs.json  snapshot.html  snapshot_prs.html  snapshot_revs.html  todo  update_json.sh  update_parent_json.sh  update_revs.sh
.github/workflows/: lint.yml  post-comment.yml  update.yml  update1.yml
history/: prs.json  revs.json
history/0012b7a3be25ed851dfbbe5cc3f7c40d21d6596c/: parent_diff.json
history/0038073a78a9639ec0b58e9764ac17847a0cd231/: parent_diff.json
history/008fca6d9b08164be52c6f6a879b03d4663ff7f0/: parent_diff.json
history/00b7a2ded5695762d1b722261b4881a549503085/: parent_diff.json
history/00fb677f596877426a8d5461839b7ef8fb8e059a/: parent_diff.json
history/01312dd9a7132c39c1d4850eb5579cf45f22fb3c/: parent_diff.json
history/015850418bce24222c8028d16987e1b07384ba3f/: parent_diff.json
history/015b315d10d3e1078504a7e1eaf15dc4c0c234f9/: parent_diff.json
js/: base.js  compare.js  gunzip.wasm  htmldiff.js  path-diff-worker.js  path-diff-worker.ts  rendered.js  snapshot-list.js  snapshot-loader.js  snapshot.js  tree-diff-worker.js
lib/: Cargo.toml  Makefile
lib/src/: lib.rs
style/: base.css  compare.css  rendered.css  snapshot.css
(+13811 files in other folders)
