# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "wasm-gunzip"
version = "1.0.0"
authors = ["arai <arai_a@mac.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
libflate= "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
